@@ -34,6 +34,17 @@ status_t add_hash(state *s, file_data_t *f)
   if (NULL == s || NULL == s)
     return status_unknown_error;
 
+  f->id = s->next_known_id;
+  s->next_known_id++;
+  f->next = NULL;
+
+  if (NULL == s->known)
+    s->known = f;
+  else
+    s->last->next = f;
+
+  s->last = f;
+
   for (i = 0 ; i < NUM_ALGORITHMS ; ++i)
     {
       /* RBF - Error check this function */
@@ -43,6 +54,42 @@ status_t add_hash(state *s, file_data_t *f)
 
   return status_ok;
 
+}
+
+int initialize_file_data(file_data_t *f)
+{
+  if (NULL == f)
+    return TRUE;
+
+  f->next = NULL;
+  f->id   = 0;
+  f->used = FALSE;
+
+  return FALSE;
+}
+
+
+int add_RBF_hash(state *s, TCHAR *fn, char *md5, char *sha256, uint64_t size)
+{
+  file_data_t * tmp;
+
+  tmp = (file_data_t *)malloc(sizeof(file_data_t));
+  if (NULL == tmp)
+    return TRUE;
+
+  if (initialize_file_data(tmp))
+    return TRUE;
+
+  tmp->file_name = _tcsdup(fn);
+  tmp->hash[alg_md5] = strdup(md5);
+  tmp->hash[alg_sha256] = strdup(sha256);
+  tmp->file_size = size;
+
+  //  print_status("%s %s", tmp->hash[alg_md5], tmp->hash[alg_sha256]);
+
+  add_hash(s,tmp);
+
+  return FALSE;
 }
 
 
@@ -69,25 +116,34 @@ status_t load_match_file(state *s, char *fn)
     return status_file_error;
   }
   
-  /* RBF - Adding hash for /dev/null */
-  file_data_t * rbf = (file_data_t *)malloc(sizeof(file_data_t));
-  rbf->hash[alg_md5] = strdup("d41d8cd98f00b204e9800998ecf8427e");
-  rbf->hash[alg_sha256] = strdup("e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855");
-  rbf->file_size = 0;
-  rbf->file_name = _TEXT("/dev/null");
-  rbf->used = FALSE;
-  rbf->id = 0;
-  rbf->next = NULL;
-  s->next_known_id++;
+  add_RBF_hash(s,
+	       _TEXT("/dev/null"),
+	       "d41d8cd98f00b204e9800998ecf8427e",
+	       "e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855",
+	       0);
 
-  add_hash(s,rbf);
+  add_RBF_hash(s,
+	       _TEXT("/home/jdoe/md5deep/svn/trunk/hashdeep/bar"),
+	       "d41d8cd98f00b204e9800998ecf8427e",
+	       "e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855",
+	       0);
+
+  add_RBF_hash(s,
+#ifdef __LINUX__
+	       _TEXT("/home/jdoe/md5deep/svn/trunk/hashdeep/abc"),
+#else
+	       _TEXT("/Users/jessekornblum/Documents/research/md5deep/svn/trunk/hashdeep/abc"),
+#endif
+	       "900150983cd24fb0d6963f7d28e17f72",
+	       "ba7816bf8f01cfea414140de5dae2223b00361a396177a9cb410ff61f20015ad",
+	       3);
+
 
   fclose(handle);
   return status_ok;
 }
 
-static char * 
-status_to_str(status_t s)
+char * status_to_str(status_t s)
 {
   switch (s) {
   case status_ok: return "ok";
@@ -102,49 +158,92 @@ status_to_str(status_t s)
   }      
 }
 
+static void
+display_match(state *s, hashtable_entry_t * match)
+{
+  /* RBF - Update this to display partial hash warnings */
+	  
+  if (s->mode & mode_display_hash)
+    display_hash_simple(s);
+  else
+  {
+    display_filename(stdout,s->current_file->file_name);
+    if (s->mode & mode_which)
+    {
+      fprintf(stdout," matches ");
+      display_filename(stdout,match->data->file_name);
+    }
+
+    print_status("");
+
+    switch (match->status) {
+    case status_partial_match:
+      print_error_unicode(s,s->current_file->file_name,"Only some hashes matched. Hash collision!");
+      break;
+      
+    case status_file_size_mismatch:
+      print_error_unicode(s,s->current_file->file_name,"File size of input does not match known file. Hash collision!");
+      break;
+      
+      /* We don't need to print warnings on file name changes */
+    default: break;
+    }
+  }
+}
 
 status_t is_known_file(state *s)
 {
+  status_t status = status_no_match;
+  int should_display = FALSE;
   hashtable_entry_t * ret , * tmp;
   hashname_t i;
+  uint64_t my_round = s->hash_round;
+
+  s->hash_round++;
+  if (my_round > s->hash_round)
+      fatal_error(s,"%s: Too many input files", __progname);
 
   for (i = 0 ; i < NUM_ALGORITHMS; ++i)
   {
+    /* RBF - Do we need to do this for each hash algorithm? */
     if (s->hashes[i]->inuse)
     {
-
       ret = hashtable_contains(s,i);
-      if (NULL != ret)
+      if (ret != NULL && primary_match == s->primary_function)
 	{
 	  tmp = ret;
 	  while (tmp != NULL)
 	    {
-	      display_filename(stdout,s->current_file->file_name);
-	      fprintf(stdout," matches ");
-	      display_filename(stdout,tmp->data->file_name);
-	      print_status(": %s", status_to_str(tmp->status));
-			   
-	      if (tmp->data->used)
-		print_status("This file has been previously matched");
-	      else
+	      if (tmp->data->used != s->hash_round)
 		{
-		  tmp->data->used = TRUE;
-		  print_status("This file has NOT been previously matched");
+		  tmp->data->used = s->hash_round;
+	
+		  display_match(s,tmp);
+	  	
+		
+		  status = tmp->status;
 		}
-		  
+	      
 	      tmp = tmp->next;
 	    }
+	  hashtable_destroy(ret);
 	}
-      else
-	{
-	  if (s->mode & mode_verbose)
-	    {
-	      display_filename(stdout,s->current_file->file_name);
-	      print_status(": No match");
-	    }
-	}
+      
+      else if (primary_match_neg == s->primary_function)
+	should_display = (NULL == ret);
     }
   }
 
-  return status_no_match;
+  if (should_display)
+    {
+      if (s->mode & mode_display_hash)
+	display_hash_simple(s);
+      else
+	{
+	  display_filename(stdout,s->current_file->file_name);
+	  print_status("");
+	}
+    }
+  
+  return status;
 }
